# doc_ingestion_pipeline

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
assets/configs/: app-configs-example.yaml  app-configs.yaml
src/: run_pipeline.sh  setup.py
src/bash/: pipeline_setup.sh  provisioning.sh
src/cloud_function/trigger_pdf_ingestion_dataflow_job/: main.py  requirements.txt
src/doc_ingestion_pipeline/beam/dofunctions/: __init__.py  base_dofn.py  generate_chunks_dofn.py  process_pdf_dofn.py
src/doc_ingestion_pipeline/beam/pipelines/: process_pdf.py
src/doc_ingestion_pipeline/databases/: vector_store.py
src/doc_ingestion_pipeline/experiments/.pkg/: requirements.txt
src/doc_ingestion_pipeline/llm/: extract_topics.py
src/doc_ingestion_pipeline/models/: configs.py  connections.py  data.py
src/doc_ingestion_pipeline/utils/: app_logging.py  file_handling.py  logging.py
src/queries/: creaete_brain_table.sql
terraform/: terraform.tfstate
terraform/environment/: main.tf  network.tf  outputs.tf  terraform.tfstate
terraform/environments/dev/: main.tf  network.tf  outputs.tf  terraform.tfstate
terraform/environments/production/: main.tf
terraform/environments/staging/: main.tf
terraform/modules/ingestion_pipeline/: main.tf  outputs.tf  variables.tf
