[tool.poetry]
name = "doc_ingestion_pipeline"
version = "1.0.0"
description = ""
authors = ["lucasvittal2 <lucasvittal@gmail.com>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tiktoken = "0.7.0"
mypy = "^1.0.0"
toml = "^0.10.2"
google-cloud-secret-manager = "2.20.0"
apache-beam = "2.59.0"
pyyaml = "^6.0"
pyarrow = "16.1.0"
Flask-Session="0.5.0"
dill = "^0.3.1"
numpy = "1.26.4"
jinja2 = "3.1.4"
setuptools = "75.1.0"
pip = "24.2"
attrs = "24.2.0"
build = "1.2.1"
colorlog = "4.8.0"
docutils = "0.21.2"
keyring = "25.4.1"
pre-commit = "^4.1.0"
pendulum = "^3.0.0"
wheel = "^0.45.1"
pytz = "^2024.2"
types-pytz = "^2024.2.0.20241221"
aiohttp = "^3.11.11"
langchain = "^0.3.15"
langchain-core = "^0.3.31"
llama-index = "^0.12.13"
path = "^17.1.0"
langchain-openai = "^0.3.2"
pydantic = "^2.10.6"
langchain-community = "^0.3.15"
langchain-google-alloydb-pg = "^0.9.1"
langchain-google-vertexai = "^2.0.12"
google-cloud-pubsub = "^2.27.3"

[poetry.group.dev.dependencies]
bandit = "^1.7.7"
pyupgrade = "^3.15.2"
safety = "^3.2.0"
isort = "^5.9.3"
black = "^24.1.0"
coverage-badge = "^1.0.0"
darglint = "^1.8.1"
pydocstyle = "^6.3.0"
pylint = "2.15.8"
pytest = "^8.0.0"
coverage = "^7.4.1"
twine = "^4.0.2"
python-semantic-release = "^8.2.0"



[tool.poetry.group.dev.dependencies]
bandit = "^1.7.7"
pyupgrade = "^3.15.2"
safety = "^3.2.0"
pre-commit = ">=3.7.1"

[tool.poetry.group.dev_latest.dependencies]
isort = {extras = ["colors"], version = "^5.13.2"}
black = {version = "^24.1.0", allow-prereleases = true}
coverage-badge = "^1.1.0"
darglint = "^1.8.1"
pydocstyle = "^6.3.0"
pylint = "2.15.8"
pytest = "^8.0.0"
coverage = "^7.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
